--- a/views/landing.pug
+++ b/views/landing.pug
@@ -3,6 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  form(action='/', method='POST')
-  input(type='email', placeholder='Enter your email... ')
-  button(type='submit') Submit
+  form(action='/', method="POST")
+    input(name='lead_email', type='email', placeholder="Enter your email address")
+    button(type='submit') Submit
